# embedded-sht

./: .gitmodules  CMakeLists.txt  Makefile
.circleci/: config.yml
sample-projects/shtc3-stm32-uvision/: copy_shtc1_driver.sh
sample-projects/shtc3-stm32-uvision/Source/: sensirion_i2c_gpio.c
sht3x/: default_config.inc  sht3x.c  sht3x.h  user_config.inc
sht4x/: default_config.inc  sht4x.c  sht4x.h
shtc1/: default_config.inc  shtc1.c  shtc1.h
tests/: Makefile
utils/: default_config.inc  sensirion_humidity_conversion.h  sensirion_temperature_unit_conversion.h
